<resources>
    <string name="app_name">Licence Organiser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Logged in as:</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="next_due_title">Next inspection due:</string>
    <string name="unit_list_item_points_title_text">Points outstanding:</string>
    <string name="qd_calculator_title">QD Calculator</string>
    <string name="add_new_unit">Add New Unit</string>
    <string name="new_unit_edit_text_hint">Unit Title</string>
    <string name="new_unit_address_edit_text">Unit address</string>
    <string name="new_unit_phone_edit_text">Phone</string>
    <string name="new_unit_co_name">CO</string>
    <string name="new_unit_save_button">Save</string>
    <string name="add_new_licence">Add new licence</string>
    <string name="new_licence_serial_edit_text_hint">Licence serial number</string>
    <string name="new_licence_standard_radio_button_text">Standard licence</string>
    <string name="new_licence_aq25_radio_button_text">AQ25 Licence</string>
    <string name="new_licence_saa_radio_button_text">SAA licence</string>
    <string name="new_licence_issue_date_edit_text_hint">Issue date</string>
    <string name="new_licence_add_ammo_button_text">Add ammunition</string>
    <string name="new_licence_save_button">Save licence</string>
    <string name="view_unit_co_label_text_view">CO:</string>
    <string name="licence_item_serial_label_text">Serial:</string>
    <string name="licence_item_type_label_text">Licence type:</string>
    <string name="licence_item_issue_date_label_text">Issued:</string>
    <string name="licence_item_expiry_date_label_text">Expires:</string>
    <string name="view_unit_add_licence_button_text">Add licence</string>
    <string name="add_unit_add_inspectionpoint_button_text">Add inspection</string>
    <string name="add_ammo_adac_label_text">ADAC</string>

    <!--strings for the hcc selection spinners-->
    <string name="hazard_division_spinner_title">Select hazard division</string>
    <string-array name="hazard_division_array">
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
    </string-array>

    <string name="compatibility_group_spinner_title">Select compatibility group</string>
    <string name="add_ammo_hcc_edit_text_hint">HCC</string>
    <string name="add_ammo_description_edit_text_hint">Designation</string>
    <string name="add_ammo_max_quantity_edit_text_hint">Max quantity allowed</string>
    <string name="add_ammo_button">Add ammo</string>
    <string name="view_licence_issue_date_label_text">Issue date:</string>
    <string name="view_licence_expiry_date_label_text">Expiry date:</string>
    <string name="view_licence_ammo_allowed_title_text_view_text">Authorised ammunition</string>
    <string name="ammo_item_layout_max_quantity_label_text">Authorised quantity:</string>
    <string name="view_licence_add_ammo_button_text">Add ammunition</string>
    <string name="add_inspection_point_inspection_point_hint">Inspection point</string>
    <string name="date_of_inspection">Date of inspection</string>
    <string name="add_inspection_point_save_button_text">Save point</string>
    <string name="complete_all_boxes">Ensure all input boxes are filled in</string>
    <string name="add_inspection_point_button_text">Add inspection point</string>
    <string name="save_inspection_button_text">Save inspection</string>
    <string name="add_inspection_button_text">Add inspection</string>
    <string name="inspection_item_label_text_view_text">Inspection date</string>
    <string name="inspection_view_points_label_text">The following points were found. Green items have been actioned:</string>
    <string name="point_completed_button_text">Complete</string>
    <string-array name="compatibility_group_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>S</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="log_out">Log out</string>
    <string name="error_password_needs_upper_case">Needs an upper case letter</string>
    <string name="error_password_needs_lower_case">Must have a lower case letter</string>
    <string name="error_password_too_short">Password too short</string>
    <string name="error_password_needs_special">Password needs special character</string>
    <string name="enter_a_unit_name">Enter a unit name</string>
    <string name="enter_the_address">Enter an address</string>
    <string name="enter_a_number">Enter a contact number</string>
    <string name="enter_co_details">Enter the CO details</string>
    <string name="form_incomplete">Please correct the problems with the form.</string>
    <string name="delete">Delete</string>
    <string name="adac">ADAC:</string>
    <string name="designation">Designation:</string>
    <string name="hcc">HCC:</string>
    <string name="twentyeightdayreminder">Chase up 28 day action points.</string>
    <string name="twentyeightdayalert">28 day reminder</string>
    <string name="licence_renewal_reminder">The following licence needs renewing:</string>
    <string name="lecence_renewal_alert">Licence renewal</string>
    <string name="inspectionDue">Inspection due in 30 days.</string>
    <string name="inspection_due_alert">Inspection due.</string>
    <string name="delete_licence_text">Delete licence</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notifications</string>
    <string name="dont_show_notifications">No notifications</string>
    <string name="show_notifications">Allow notifications</string>
    <string name="appwidget_text">No units added.</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_unit_title_label_text">Unit:</string>
    <string name="unit_widget_address_label_text">Address:</string>
    <string name="unit_widget_contact_no_label_text">Tel.</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="rank">Rank</string>
    <string name="rank_spinner_title">Select rank</string>
    <string name="verify_email">Verify email</string>
    <string name="resend_verification">Resend verification</string>
    <string name="cancel">Cancel</string>


</resources>
