<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLicenceActivity">

    <EditText
        android:id="@+id/new_licence_serial_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_licence_serial_edit_text_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/new_licence_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/new_licence_radio_group_padding"
        android:paddingRight="@dimen/new_licence_radio_group_padding"
        android:paddingEnd="@dimen/new_licence_radio_group_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_licence_serial_edit_text">

        <RadioButton
            android:id="@+id/new_licence_standard_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_licence_standard_radio_button_text" />

        <RadioButton
            android:id="@+id/new_licence_aq25_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_licence_aq25_radio_button_text" />

        <RadioButton
            android:id="@+id/new_licence_saa_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_licence_saa_radio_button_text" />
    </RadioGroup>

    <EditText
        android:id="@+id/new_licence_issue_date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/new_licence_issue_date_edit_text_hint"
        android:inputType="none"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_licence_radio_group" />

    <Button
        android:id="@+id/new_licence_add_ammo_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_licence_add_ammo_button_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_licence_issue_date_edit_text" />

    <Button
        android:id="@+id/new_licence_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/new_licence_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_licence_add_ammo_button" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_licence_ammo_recycler_view"
        android:layout_width="368dp"
        android:layout_height="236dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/new_licence_save_button"
        app:layout_constraintStart_toStartOf="@+id/new_licence_save_button"
        app:layout_constraintTop_toBottomOf="@+id/new_licence_save_button" />

</android.support.constraint.ConstraintLayout>