<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInspectionActivity">

    <EditText
        android:id="@+id/add_inspction_date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/date_of_inspection"
        android:inputType="none"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_inspection_new_point_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_inspection_point_button_text"
        app:layout_constraintStart_toStartOf="@+id/add_inspction_date_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/add_inspction_date_edit_text" />

    <Button
        android:id="@+id/add_inspection_save_inspection_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_inspection_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_inspection_new_point_button"
        app:layout_constraintEnd_toEndOf="@+id/add_inspction_date_edit_text"
        app:layout_constraintStart_toEndOf="@+id/add_inspection_new_point_button"
        app:layout_constraintTop_toBottomOf="@+id/add_inspction_date_edit_text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_inspection_recycler_view"
        android:layout_width="368dp"
        android:layout_height="385dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_inspection_save_inspection_button"
        app:layout_constraintStart_toStartOf="@+id/add_inspection_new_point_button"
        app:layout_constraintTop_toBottomOf="@+id/add_inspection_new_point_button" />

</android.support.constraint.ConstraintLayout>